--- a/web/themes/ipu/templates/page/page.html.twig
+++ b/web/themes/ipu/templates/page/page.html.twig
@@ -114,4 +114,10 @@
       </div>
       </footer>
   {% endif %}
+
+  {% if page.off_canvas %}
+    <div class="off-canvas">
+      {{ page.off_canvas }}
+    </div>
+  {% endif %}
 </div>
