Minor change to develop, to test merge to Master

--- a/web/modules/custom/ipu_tweaks/css/extra_admin.css
+++ b/web/modules/custom/ipu_tweaks/css/extra_admin.css
@@ -19,6 +19,10 @@
 .node-ipu-event-edit-form .field--name-field-fc-session-types,
 .node-ipu-event-edit-form .field--name-field-ipu-event-session-type,
 .node-ipu-event-form .field--name-field-fc-session-types,
-.node-ipu-event-form .field--name-field-ipu-event-session-type{
+.node-ipu-event-form .field--name-field-ipu-event-session-type {
   display: none;
+}
+/* Arguments for viewfields */
+.field--name-field-sections .form-disabled {
+  display: none !important;
 }
