Add more config options to ipu_map for data boxes and provenance text

--- a/web/modules/custom/ipu_tweaks/css/extra_admin.css
+++ b/web/modules/custom/ipu_tweaks/css/extra_admin.css
@@ -22,7 +22,7 @@
 .node-ipu-event-form .field--name-field-ipu-event-session-type {
   display: none;
 }
-/* Arguments for viewfields */
+/* Arguments for viewfields is hidden*/
 .field--name-field-sections .form-disabled {
   display: none !important;
 }
