--- a/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
@@ -63,4 +63,9 @@
             <a class="more-data-parline" href="{{ url }}"><span class="fas fa-chart-pie"></span>More data from Parline</a>
         </li>
     </ul>
+    {% if data_provenance is not same as(null) %}
+    <div class="data-provenance">
+        {{ data_provenance }}
+    </div>
+    {% endif %}
 </div>
