--- a/web/modules/custom/ipu_map/templates/ipu-map-parline-data.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-parline-data.html.twig
@@ -12,7 +12,7 @@
  */
 #}
 <div class="ipu-map-parline-data mb-5">
-    <h2 class="sr-only">Data points:</h2>
+    <h2 class="sr-only">{{ 'Data points'|t }} :</h2>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
@@ -23,7 +23,7 @@
             <div class="col-md-3">
                 <div class="card h-100 card-current-women-percent">
                     <div class="term-icon term-icon-88 card-header">
-                        <span class="data-point-title">{{ language_id == 'fr' ? 'Femmes dans les parlements' : 'Women in Parliament' }}</span>
+                        <span class="data-point-title">{{ 'Women in parliament'|t }}</span>
                     </div>
                     <div class="card-body d-flex flex-column stats">
                         <div class="d-flex">
@@ -32,9 +32,9 @@
                         </div>
                         <div class="d-flex align-items-center">
                             <div class="stats-number">{{ current_women_percent }}%</div>
-                            <div class="stats-content"> are women </div>
+                            <div class="stats-content"> {{ 'of MPs are women'|t }} </div>
                         </div>
-                        <div class="mt-auto"><a class="stats-more-link" href="/our-work/gender-equality">Gender equality</a></div>
+                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_gender_link }}">{{ 'Gender equality'|t }}</a></div>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             <div class="col-md-3">
                 <div class="card h-100 card-under-45-percent">
                     <div class="term-icon term-icon-117 card-header">
-                        <span class="data-point-title">Youth Participation</span>
+                        <span class="data-point-title">{{ 'Youth in parliament'|t }}</span>
                     </div>
                     <div class="card-body d-flex flex-column stats">
                         <div class="d-flex stats-age">
@@ -53,9 +53,9 @@
                         </div>
                         <div class="d-flex  align-items-center">
                             <div class="stats-number">{{ total_younger_45_percentage }}% </div>
-                            <div class="stats-content"> of MPs are under 45</div>
+                            <div class="stats-content"> {{ 'of MPs are under 45'|t }}</div>
                         </div>
-                        <div class="mt-auto"><a class="stats-more-link" href="/">Focus on youth</a></div>
+                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_youth_link }}">{{ 'Focus on youth'|t }}</a></div>
                     </div>
                 </div>
             </div>
@@ -65,14 +65,14 @@
             <div class="col-md-3">
                 <div class="card h-100">
                     <div class="term-icon term-icon-82 card-header">
-                        <span class="data-point-title">Human Rights</span>
+                        <span class="data-point-title">{{ 'MP\'s human rights'|t }}</span>
                     </div>
                     <div class="card-body d-flex flex-column stats">
                         <div class="d-flex align-items-center">
                             <div><div class="stats-circle">{{ human_rights_cases }}</div></div>
-                            <div class="stats-content">current cases</div>
+                            <div class="stats-content">{{ 'cases currently treated by the Committee on the Human Rights of MPs'|t }}</div>
                         </div>
-                        <div class="mt-auto"><a class="stats-more-link" href="#">Human rights of MPs</a></div>
+                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_hr_link }}">{{ 'Human rights of MPs'|t }}</a></div>
                     </div>
                 </div>
             </div>
