--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -876,6 +876,15 @@ a.btn {
 .more-data-parline {
   width: 100%;
 }
+
+.data-provenance {
+  padding: 10px;
+  background-color: $light;
+  margin: 30px 0 20px 0;
+  p {
+    font-size: $font-size-sm;
+  }
+}
 // Currently removing row and column styles
 // NOTE: May want to try and remove these in Drupal
 // NOTE: Display suite is using Bootstrap 1 column layout
