--- a/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
@@ -15,37 +15,36 @@
     <ul class="list-unstyled">
         {#<li>{{ dump(_context) }}</li>#}
         <li class="d-flex justify-content-between ipu-border-bottom">
-            <span class="stats-title">Population</span>
+            <span class="stats-title">{{ 'Population'|t }}</span>
             <span class="stats-content">{{ population_in_millions }}
-                million people</span>
+                {{ 'million people'|t }}</span>
         </li>
         <li class="d-flex justify-content-between ipu-border-bottom">
-            <span class="stats-title">Number of MPs</span>
+            <span class="stats-title">{{ 'Number of MPs'|t }}</span>
             <span class="stats-content">{{ members_per_country }}
                 MPs</span>
         </li>
         <li class="d-flex justify-content-between ipu-border-bottom">
-            <span class="stats-title">Legislature</span>
+            <span class="stats-title">{{ 'Legislature'|t }}</span>
             <span class="stats-content">{{ structure_of_parliament }}</span>
         </li>
 
         <li class="d-flex justify-content-between ipu-border-bottom">
-            <span class="stats-title">Last election</span>
+            <span class="stats-title">{{ 'Last election'|t }}</span>
             <span class="stats-content">{{ last_election_date }}</span>
         </li>
         <li class="d-flex justify-content-between ipu-border-bottom">
-            <span class="stats-title">IPU Membership</span>
+            <span class="stats-title">{{ 'IPU Membership'|t }}</span>
             {% if membership_status %}
-                <span class="fa fa-check text-primary" title="{{ membership_status_text }}">
-                    
+                <span class="fa fa-check text-primary" title="{{ membership_status_text|t }}">
                 </span>
             {% else %}
-                <span class="fa fa-times text-primary" title="{{ membership_status_text }}">
+                <span class="fa fa-times text-primary" title="{{ membership_status_text|t }}">
                 </span>
             {% endif %}
         </li>
         <li class="d-flex justify-content-between ipu-border-bottom">
-            <span class="stats-title">Common principles signatory</span>
+            <span class="stats-title">{{ 'Common principles signatory'|t }}</span>
             {% if principles_signatory %}
                 <span class="fa fa-check text-primary" title="{{ principles_signatory_text }}">
                 </span>
@@ -55,12 +54,12 @@
             {% endif %}
         </li>
         <li class="d-flex justify-content-between ipu-border-bottom">
-            <span class="stats-title">Website</span>
+            <span class="stats-title">{{ 'Website'|t }}</span>
             <span class="stats-content">{{ website_link|join('<br />')|raw }}</span>
         </li>
 
         <li>
-            <a class="more-data-parline" href="{{ url }}"><span class="fas fa-chart-pie"></span>More data from Parline</a>
+            <a class="more-data-parline" href="{{ url }}"><span class="fas fa-chart-pie"></span>{{ 'More data from Parline'|t }}</a>
         </li>
     </ul>
     {% if data_provenance is not same as(null) %}
