Do not translate "Is an IPU member" text in Twig - it's already translated in the module.

--- a/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country-stats.html.twig
@@ -36,10 +36,10 @@
         <li class="d-flex justify-content-between ipu-border-bottom">
             <span class="stats-title">{{ 'IPU Membership'|t }}</span>
             {% if membership_status %}
-                <span class="fa fa-check text-primary" title="{{ membership_status_text|t }}">
+                <span class="fa fa-check text-primary" title="{{ membership_status_text }}">
                 </span>
             {% else %}
-                <span class="fa fa-times text-primary" title="{{ membership_status_text|t }}">
+                <span class="fa fa-times text-primary" title="{{ membership_status_text }}">
                 </span>
             {% endif %}
         </li>
