Add 4 (2x2) layout for news on country page. Add hard-coded Callout (in ipu_map module) for country pages.

--- a/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-country.html.twig
@@ -29,6 +29,9 @@
     </div>
 
 </div>
+<div class="country-callout">
+    {{ content.callout }}
+</div>
 <div class="in-the-section">
     <div class="container">
         <h2>{{ 'In the region'|t }}</h2>
