Move apostrophe in "MPs" in data points. Links to french urls need FR prepending

--- a/web/modules/custom/ipu_map/templates/ipu-map-parline-data.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-parline-data.html.twig
@@ -65,7 +65,7 @@
             <div class="col-md-3">
                 <div class="card h-100">
                     <div class="term-icon term-icon-82 card-header">
-                        <span class="data-point-title">{{ 'MP\'s human rights'|t }}</span>
+                        <span class="data-point-title">{{ 'MPs\' human rights'|t }}</span>
                     </div>
                     <div class="card-body d-flex flex-column stats">
                         <div class="d-flex align-items-center">
