Make Slides field on Carousel para non-translatable. Fix for with of Chosen fields (else > 100% width) in extra_admin.css. Update to description of Support for your parliament.

--- a/web/modules/custom/ipu_tweaks/css/extra_admin.css
+++ b/web/modules/custom/ipu_tweaks/css/extra_admin.css
@@ -23,6 +23,12 @@
   display: none;
 }
 /* Arguments for viewfields is hidden*/
-.field--name-field-sections .form-disabled {
+/*.field--name-field-sections .form-disabled {
   display: none !important;
+}*/
+
+.chosen-container-multi.form-select.chosen-enable,
+.chosen-drop {
+  max-width: 100% !important;
+  width: 100% !important;
 }
