--- a/web/themes/ipu/src/sass/ipu.style.scss
+++ b/web/themes/ipu/src/sass/ipu.style.scss
@@ -83,6 +83,7 @@ $spacers: map-merge(
 // Other
 // -----------------------------------------------------------------------------
 @import "block/block";
+@import "block/block2";
 @import "navigation/nav";
 @import "content/node.page";
 @import "content/node.article";
