--- a/web/themes/ipu/templates/views/views-view--taxonomy-term.html.twig
+++ b/web/themes/ipu/templates/views/views-view--taxonomy-term.html.twig
@@ -51,9 +51,10 @@
 
     {{ exposed }}
     {{ attachment_before }}
-
     {% if rows -%}
+        <div class="views-rows-wrapper">
         {{ rows }}
+        </div>
     {% elseif empty -%}
         {{ empty }}
     {% endif %}
