Update link button texts for parliament page data points.

--- a/web/modules/custom/ipu_map/templates/ipu-map-parline-data.html.twig
+++ b/web/modules/custom/ipu_map/templates/ipu-map-parline-data.html.twig
@@ -34,7 +34,7 @@
                             <div class="stats-number">{{ current_women_percent }}%</div>
                             <div class="stats-content"> {{ 'of MPs are women'|t }} </div>
                         </div>
-                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_gender_link }}">{{ 'Gender equality'|t }}</a></div>
+                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_gender_link }}">{{ 'IPU on gender equality'|t }}</a></div>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                             <div class="stats-number">{{ total_younger_45_percentage }}% </div>
                             <div class="stats-content"> {{ 'of MPs are under 45'|t }}</div>
                         </div>
-                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_youth_link }}">{{ 'Focus on youth'|t }}</a></div>
+                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_youth_link }}">{{ 'IPU on youth empowerment'|t }}</a></div>
                     </div>
                 </div>
             </div>
@@ -72,7 +72,7 @@
                             <div><div class="stats-circle">{{ human_rights_cases }}</div></div>
                             <div class="stats-content">{{ 'cases currently treated by the Committee on the Human Rights of MPs'|t }}</div>
                         </div>
-                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_hr_link }}">{{ 'Human rights of MPs'|t }}</a></div>
+                        <div class="mt-auto"><a class="stats-more-link" href="{{ ipu_map_hr_link }}">{{ 'Report an MP in danger'|t }}</a></div>
                     </div>
                 </div>
             </div>
